# Tubes01_AI

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  run.bat  run.sh
src/: main.cpp
src/advanced/: genetic.cpp  genetic.hpp  simulatedannealing.cpp  simulatedannealing.hpp
src/cube/: Point.cpp  Point.hpp  magicfive.cpp  magicfive.hpp
src/hillclimb/: hillclimb.cpp  hillclimb.hpp  randomrestart.cpp  randomrestart.hpp  sidewaysmove.cpp  sidewaysmove.hpp  steepestascent.cpp  steepestascent.hpp  stochastic.cpp  stochastic.hpp
src/plt/: matplotlibcpp.h  plot.cpp  plot.hpp
src/solver/: solver.cpp  solver.hpp
src/visualize/: magic_cube  magic_cube.cpp  simple_opengl  simple_opengl.cpp  visualize.cpp  visualize.hpp
